--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green Blades - Premium Grass Cutting Service</title>
+    <title>Green Blades Pro - Premium Grass Cutting Service</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo slide-in-left">Green Blades</div>
+            <div class="logo slide-in-left">Green Blades PRO</div>
             <div class="menu-toggle">
                 <i class="fas fa-bars"></i>
             </div>
